<!--
  ~ Copyright (c) 2017.
  ~ qsboy.com 版权所有
  -->

<resources>
    <string name="app_name">防撤回神器</string>
    <string name="desc">开启后，就能截获对方所撤回的消息啦\n如果这个开关被关闭软件是如法工作的哦</string>
    <string name="service_label">Message Captor</string>

    <string name="domain">www.qsboy.com</string>

    <string name="step1">打开辅助功能的开关 ,\n然后打开 微信 或者 QQ \n应该会收到一条表示成功的顶部弹窗通知</string>
    <string name="step2">打开他们的\"通知显示详情\"\n使收到的消息显示内容而不是某某发来一条消息</string>
    <string name="step3">[重要]如果没有的话请重启\n或者尝试重新打开开关</string>

    <string name="warn1">\t\t\t\t建议在刚开始使用软件的时候打开调试开关, 如果能显示截获的消息 软件才是正常工作</string>
    <string name="warn2">\t\t\t\t需要把我的软件设为 白名单/受保护的应用/进程带锁, 不然辅助功能的开关会自动关闭</string>
    <string name="warn3">\t\t\t\t重新查找撤回的消息需要双击撤回的地方, 如果只是想显示只需单击\n\n\t\t\t\t三击: 删除最后加进来的一条数据. 因为在滚屏的时候可能会乱加, 如果发现找错, 可以尝试三击</string>
    <string name="warn4">\t\t\t\t只有打开软件之后的撤回消息能看到, 且只有打开消息提醒的联系人/群才能看到</string>
    <string name="warn5">\t\t\t\t查找撤回图片的原理是到QQ图片缓存目录下去查找与撤回消息同时创建的文件, 而曾经发过的图片只会生成链表而不会重新创建文件所以查找不到</string>
    <string name="warn6">\t\t\t\t三星手机请检查是否给了外部文件读写权限(查找图片要用)</string>
    <string name="warn7">\t\t\t\t魅族的辅助功能开关请到 "辅助功能-无障碍" 里打开</string>
    <string name="warn8">\t\t\t\t微信暂时看不了撤回的图片</string>
    <string name="warn9">\t\t\t\tQQ 微信都看不了语音</string>
    <string name="warn10">\t\t\t\t还未完全支持Emoji, 可能会影响查找</string>
    <string name="warn11">\t\t\t\t软件基本原理就是通过辅助功能读取通知栏, 以及屏幕底端的内容. 保存到本地, 并在需要的时候查找, 所以某些情况会失败:</string>
    <string name="warn12">1: QQ聊天时屏幕不在最底端</string>
    <string name="warn13">2: 在QQ主界面</string>
    <string name="warn14">3: 与在QQ刚加的加好友\n面对面聊天时</string>

    <string name="about_me_1">\t\t\t\t大家好, 我叫钱盛, 坐标杭州, 今年18.\n\n\t\t\t\t其实我是一名\"辍学\"儿童, 因中考失利 没读高中, 转而直接去隔壁浙江大学旁听蹭课, 并开启了一段全新的自学生涯</string>
    <string name="about_me_2">\t\t\t\t受家人影响, 从小喜欢电子, IT等颇具创造力的事物, 对反复刷题的生活深恶痛绝. 正好因为这次偶然, 让我跳进了天堂, 自由的学习. 并加入了跆拳道社团, 获得了社交. 同时省下了学费, 以及大好的青春时光</string>
    <string name="about_me_3">\t\t\t\t借这个平台我想再说几句:\n应试教育虽然并不完美, 但如果你有梦想, 请坚持下去.\n好大学的环境, 或许比那一纸文凭更珍贵, 至少我受益匪浅</string>
    <string name="about_me_4">\t\t\t\t另外, 本软件是无毒无广告绿色软件, 维护成本也比较高, 花在上面的时间已有半年之久, 如果喜欢, 欢迎捐助, 你们的支持才是我坚持维护的动力~</string>
    <string name="about_me_5">\t\t\t\t个人信息:
        \nQQ\t\t\t\t\t:\t 401421226
        \n微博\t\t\t:\t Gentleman_QS
        \nGithub\t:\t github.com/JasonQS/Anti-recall</string>

    <string name="update_4.1">4.1:
        \n\n[优化] 图片查找: 图片更清晰; \n更改数据存储格式, 使查找精度从分到秒
        \n\n[优化] UI 首页更加简洁清爽; \n把本页的图片说明换成文字说明, 内存占用更小
        \n\n[优化] 完善提示信息 基本照着帮助都能成功了
        \n\n[修复] 有时点击会出现 某某撤回一条消息
        \n\n[修复] 调试功能开关显示不正常
        \n\n[修复] 微信名字中带有括号会截取失败
        \n\n[已知问题]: QQ中名字中带有括号还是会有问题
        \n\n[已知问题]: 还不能适配Emoji
        \n\n[新版预告] 由于静音时无法截取通知, 下版本将会解决这一问题并新增微信特别关心功能
        \n\n喜欢本软件可以:\n给我红包呀\n知乎里给个赞也好呀\n如果Github也能Star就更谢谢啦!
        \n\n你们的支持才是我坚持维护的动力, 谢谢大家\n</string>

    <string name="update_4.0">4.0:
        \n\n[新增] 可以查看撤回的图片啦
        \n\n[新增] 可以查看多条连续撤回啦
        \n\n[新增] 在QQ的其他人的聊天界面也能截获消息
        \n\n[新增] 辅助功能快速入口
        \n\n[优化] 多重查找成功率更高
    </string>

</resources>
